# Lizhyr

./: CMakeLists.txt  package.xml
config/: processor.yaml
doc/: chunk_payload_format.md
doc/debug/: processor.md
include/: processor_node.hpp
launch/: processor.launch.py
lizhyr_processor/: CMakeLists.txt  package.xml
lizhyr_processor/launch/: processor.launch.py
lizhyr_processor/src/: processor_node.cpp  processor_node_main.cpp
lizhyr_restorer/: CMakeLists.txt  package.xml
lizhyr_restorer/config/: restorer.yaml
lizhyr_restorer/include/: restorer_node.hpp
lizhyr_restorer/launch/: restorer.launch.py
lizhyr_restorer/src/: restorer_node.cpp  restorer_node_main.cpp
src/: processor_node.cpp
